# SG-Lib-Books

./: .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  conftest.py  firebase.json  housing.py  m_db.py  m_db_backup.py  main.py  main_latest_auth_backup.py  main_mongo.py  main_origin.py  main_past.py  mix_p.py  nlb_api.py  nlb_rest_api.py  package.json  pagination_backup.py  process.py  public_housing.py  pyproject.toml  pyrightconfig.json  q_full_bks.sql  q_subset_bks.sql  requirements.txt  requirements_v2.txt  schemas.py  supa_db.py  tailwind.config.js  test_code.py  test_nlb_api.py  testing_code.html  testing_code.py  testing_code.qmd  vercel.json
archive/: nlb_api.py  process.py  requirements.txt  supa_db.py  test_code.py
back-end/: .env.example  Dockerfile  pyproject.toml
back-end/src/: config.py  main.py  utils.py
back-end/src/api/: deps.py  main.py
back-end/src/api/routes/: book_subscription.py  books.py  email.py  library.py  notification_tokens.py  notifications.py  search.py  user.py
back-end/src/crud/: base.py  book_avail.py  book_info.py  book_outdated_bid.py  book_subscription.py  email_items.py  library.py  notification_tokens.py  notifications.py  user_search.py  users.py
back-end/src/modals/: book_avail.py  book_info.py  book_outdated_bid.py  book_response.py  book_search.py  book_subscription.py  email_items.py  library.py  library_response.py  notification_tokens.py  notifications.py  user_books.py  user_library.py  user_search.py  users.py
back-end/src/services/: cloud_task.py  firebase_messaging.py  mailer.py
back-end/src/utils/: book_avail.py
front-end/: .env.example  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
maizzle/: .gitignore  README.md  config.js  config.production.js  (+1 more)
src/: m_db.py  (+6 more)
(+234 files in other folders)
