[tool.poetry]
name = "sg-nlb-avail-bks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mongo = "^0.2.0"
supabase = "^2.9.1"
fastapi = "^0.115.4"
fastapi-blog = "^0.6.0"
fastapi-login = "^1.10.2"
pendulum = "^3.0.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
uvicorn = "^0.32.0"
watchfiles = "^0.24.0"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.17"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
